Removed size comparison in QFileInfo::operator==.

QTBUG-4031 and QTBUG-4036 mention that QFileInfo::operator==
includes a size() comparison as part of its equality check. I've
removed this check as it doesn't seem to be integral to the comparison.

Task-number: QTBUG-4031
Task-number: QTBUG-4036
Change-Id: I5663ec0e1ac8f70e0a156357c284696779ecd380
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 318d39ccafc6ca4fa643bbf0b4b10a7d97ff1716 https://github.com/qt/qtbase/commit/318d39ccafc6ca4fa643bbf0b4b10a7d97ff1716